3rd commit transfer using services *only for recipe

--- a/app2/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/app2/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,8 +8,7 @@
 <div class="row">
   <div class="col-xs-12">
     <app-recipe-item *ngFor="let recipeel of recipes"
-    [recipe]='recipeel'(selectedRecipe)="selectedRecipeIndex(recipeel)"
-    ></app-recipe-item>
+    [recipe]='recipeel'></app-recipe-item>
   </div>
 </div>
 
