--- a/app2/src/app/recipes/recipes.component.html
+++ b/app2/src/app/recipes/recipes.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (recipeDetails)="recipeDetailsCame($event)"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
     <app-recipe-details [details]="recipevalues" ></app-recipe-details>
