--- a/app2/src/app/recipes/recipes.component.html
+++ b/app2/src/app/recipes/recipes.component.html
@@ -3,7 +3,6 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-details [details]="recipevalues" ></app-recipe-details>
-    <p> Select A Recipe</p>
+    <router-outlet></router-outlet>
   </div>
 </div>
