--- a/app2/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/app2/src/app/recipes/recipe-details/recipe-details.component.html
@@ -17,7 +17,7 @@
       </button>
       <ul class="dropdown-menu">
         <li><a (click)=addToShoppingList()>To Shopping List</a></li>
-        <li><a href="">Edit Recipe</a></li>
+        <li><a (click)="editRecipe()" >Edit Recipe</a></li>
         <li><a href="">Delete Recipe</a></li>
       </ul>
     </div>
