--- a/app2/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/app2/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -1,22 +1,22 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit) = "listAdd(f)" #f="ngForm">
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control"#name>
+          <input type="text" id="name" class="form-control" name="name" ngModel required>
         </div>
 
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" class="form-control" id="amount" #amount>
+          <input type="number" class="form-control" id="amount" name="amount" ngModel required >
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="button" (click)= "listAdd(name.value, amount.value)">Add</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button class="btn btn-primary" type="button" (click)="clear()">Clear</button>
         </div>
       </div>
     </form>
