--- a/app2/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
+++ b/app2/src/app/shopping-list/shopping-list-edit/shopping-list-edit.component.html
@@ -14,9 +14,9 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit" [disabled]="!f.valid">Add</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button" (click)="clear()">Clear</button>
+          <button class="btn btn-success" type="submit" [disabled]="!f.valid">{{ editMode ? 'Update': 'Add' }}</button>
+          <button class="btn btn-danger" type="button" (click)="delete()" [disabled]="!f.valid">Delete</button>
+          <button class="btn btn-primary" type="button" (click)="clear()" [disabled]="!f.valid">Clear</button>
         </div>
       </div>
     </form>
