--- a/app2/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/app2/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,52 +1,60 @@
 <div class="row">
   <div class="col-xs-12">
-     <form>
+     <form  [formGroup]="recipeForm" (submit)='onSubmit()'>
        <div class="row">
          <div class="col-xs-12">
-           <button type="submit" class="btn btn-success">Save</button>
-           <button type="button" class="btn btn-danger">Cancel</button>
+           <button type="submit" class="btn btn-success"[disabled]='!recipeForm.valid'>Save</button>
+           <button type="button" class="btn btn-danger" (click)="onCancle()">Cancel</button>
          </div>
        </div>
        <div class="row">
          <div class="col-xs-12">
            <div class="form-group">
              <label for="name">Name</label>
-             <input type="text" id="name" class="form-control">
+             <input type="text" id="name" class="form-control" formControlName="name">
            </div>
          </div>
        </div>
        <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
-            <label for="name">Image Path </label>
-            <input type="text" id="imgurl" class="form-control">
+            <label for="imgurl">Image Path </label>
+            <input type="text" id="imgurl" class="form-control" formControlName="imgurl" #imgPath>
           </div>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <img src="" alt="" class="img-responsive">
+          <img [src]="imgPath.value" alt="" class="img-responsive">
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
           <div class="form-group">
             <label for="desc">Description</label>
-            <textarea  id="desc" cols="30" rows="6" class="form-control"></textarea>
+            <textarea  id="desc" cols="30" rows="6" class="form-control" formControlName="desc"></textarea>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-xs-12">
-          <div class="row">
+        <div class="col-xs-12" formArrayName = "ingredients">
+          <div class="row"
+          *ngFor="let ingredientctrl of recipeForm.get('ingredients').controls;let i= index"
+           [formGroupName]="i" style="margin-top:10px;">
             <div class="col-xs-8">
-              <input type="text" class="form-control">
+              <input type="text" class="form-control" formControlName="name">
             </div>
             <div class="col-xs-2">
-              <input type="number" class="form-control">
+              <input type="number" class="form-control" formControlName="amount">
             </div>
             <div class="col-xs-2">
-              <button class="btn btn-danger">X</button>
+              <button type="button" class="btn btn-danger"(click)="onDeleteIngredient(i)">X</button>
+            </div>
+          </div>
+          <hr/>
+          <div class="row">
+            <div class="col-xs-12">
+              <button class="btn btn-success" type="button" (click)="onAddIngredient()">Add a new Ingredient</button>
             </div>
           </div>
         </div>
